fix(FF-235): change sidebar size to m; change h1 gap

--- a/packages/page-layout/src/components/PageServices/styles.module.scss
+++ b/packages/page-layout/src/components/PageServices/styles.module.scss
@@ -32,7 +32,7 @@
   display: flex;
   flex-direction: column;
   padding: $dimension-3m;
-  gap: $dimension-3m;
+  gap: $dimension-2m;
   box-sizing: border-box;
 }
 
