--- a/packages/page-layout/src/components/PrivateSidebar/helperComponents/SidebarTitle/styles.module.scss
+++ b/packages/page-layout/src/components/PrivateSidebar/helperComponents/SidebarTitle/styles.module.scss
@@ -3,7 +3,6 @@
 .wrapper {
   display: flex;
   flex-direction: row;
-  padding: $dimension-1m;
   gap: $dimension-1m;
   align-items: center;
 }
